# libAudioReplacer

./: .gitignore  AudioTranscriptionUtils.cpp  AudioTranscriptionUtils.hpp  CMakeLists.txt  CommonUtils.cpp  CommonUtils.hpp  LICENSE  ProjectFileUtils.cpp  ProjectFileUtils.hpp  README.md  library.h
include/: LibAudioReplacer.h
src/: AudioTranscriptionUtils.cpp  InternalUtils.h  ProjectFileUtils.cpp
